# bay

./: pyproject.toml  readme.md
examples/: bay.toml
src/bay/: __init__.py  bay.py  config.py
