[project]
name = "bay"
version = "0"
dependencies = ["toml", "dacite", "platformdirs"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "types-toml"]

[project.scripts]
bay = "bay:entry_point"

[tool.mypy]
files = ["src", "tests"]
namespace_packages = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_concatenate = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = "tests"
